--- a/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
+++ b/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
@@ -84,7 +84,7 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" (click)="activeModal.dismiss()">
+  <button type="button" class="btn btn-primary" (click)="enregistrer()">
     Enregistrer
   </button>
   <button
