--- a/src/app/pages/workflows/workflows.component.html
+++ b/src/app/pages/workflows/workflows.component.html
@@ -17,7 +17,7 @@
     <app-add-workflow-form></app-add-workflow-form>
   </div>
 
-  <div>
+  <!-- <div>
     <app-steps-flow></app-steps-flow>
-  </div>
+  </div> -->
 </div>
