--- a/src/app/pages/workflows/update-flow/update-flow.component.html
+++ b/src/app/pages/workflows/update-flow/update-flow.component.html
@@ -1,6 +1,6 @@
 <div class="header bg-gradient-danger pb-5 pt-5 pt-md-8"></div>
 
-<div class="container-fuild">
+<div class="container-fluid">
   <div class="card rounded shadow p-5 m-3 border-0">
     <h3>
       Informations générales
