--- a/src/app/pages/documents/document-acquisition/document-acquisition.component.html
+++ b/src/app/pages/documents/document-acquisition/document-acquisition.component.html
@@ -25,7 +25,7 @@
           </div>
           <div class="table-responsive">
             <table class="table">
-              <thead class="thead-dark">
+              <thead class="thead-light">
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">Nom</th>
