--- a/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
+++ b/src/app/pages/workflows/modal-associate-user/modal-associate-user.component.html
@@ -40,7 +40,7 @@
           <li class="list-group-item" *ngFor="let user of searchResults">
             <div class="row justify-content-between">
               <span class="col-md-9">
-                {{ user.name }}
+                {{ user.username }}
               </span>
               <div class="col-md-3">
                 <div class="row justify-content-center">
@@ -66,7 +66,7 @@
           <li class="list-group-item" *ngFor="let user of selectedUsers">
             <div class="row justify-content-between">
               <span class="col-md-9">
-                {{ user.name }}
+                {{ user.username }}
               </span>
               <div class="col-md-3">
                 <div class="row justify-content-center">
