--- a/src/app/pages/signature/signature.component.html
+++ b/src/app/pages/signature/signature.component.html
@@ -1,35 +1,44 @@
 <div class="header bg-gradient-danger pb-3 pt-5 pt-md-8">
-  <a class="nav-link" class="btn btn-primary ml-3 mt-4">
+  <button *ngIf="display===false" class="btn btn-primary ml-3 mt-4">
     <i class="fas fa-pen-nib"></i>
     <span>Créer une signature</span>
-  </a>
+  </button>
 </div>
 
 <div class="container-fluid mt-5">
-  <button class="btn btn-success">Signer</button>
-  <button class="btn btn-primary">Vérifier</button>
+  <div *ngIf="display===false">
+    <button class="btn btn-success" (click)="changeDisplay()">Signer</button>
+    <button class="btn btn-primary">Vérifier</button>
 
-  <div class="mt-5">
-    <h4 class="card-title">Vos signatures</h4>
-    <div class="row">
-      <app-signature-list></app-signature-list>
+    <div class="mt-5">
+      <h4 class="card-title">Vos signatures</h4>
+      <div class="row">
+        <app-signature-list></app-signature-list>
+      </div>
     </div>
-  </div>
 
-  <div class="mt-5">
-    <h4 class="card-title">Documents Signés</h4>
-    <div class="row">
-      <div class="col-lg-3">
-        <div class="card text-white  mb-3" style="max-width: 18rem">
-          <div class="card-header bg-gray-dark">Document 1</div>
-          <div class="card-body">
-            <p class="card-text">
-              Some quick example text to build on the card.
-            </p>
+    <div class="mt-5">
+      <h4 class="card-title">Documents Signés</h4>
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="card text-white mb-3" style="max-width: 18rem">
+            <div class="card-header bg-gray-dark">Document 1</div>
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  <div>
+    <app-signer *ngIf="display===true"></app-signer>
+    <!-- <app-signer *ngIf="display===true"></app-signer> -->
+  </div>
 </div>
+
+
 <!-- (click)="initiateWorkflow()" -->
