--- a/src/app/pages/workflows/update-flow/update-flow.component.html
+++ b/src/app/pages/workflows/update-flow/update-flow.component.html
@@ -2,9 +2,7 @@
 
 <div class="container-fluid">
   <div class="card rounded shadow p-5 m-3 border-0">
-    <h3>
-      Informations générales
-    </h3>
+    <h3>Informations générales</h3>
 
     <div class="row mt-4">
       <div class="col-lg-6">
@@ -28,7 +26,7 @@
       <div class="col-lg-6">
         <div class="row justify-content-center align-content-start">
           <span class="form-control-label col-3">Message :</span>
-          <span class=" text-sm col-9"
+          <span class="text-sm col-9"
             >DG bien vouloir approuver le contrat de d'interim de Zobel dans la
             société audipharm**</span
           >
@@ -46,7 +44,8 @@
           />
         </div>
       </div>
-    </div> <hr>
+    </div>
+    <hr />
 
     <h3 class="mt-3">Progression</h3>
     <div class="row mt-4 justify-content-center">
@@ -63,20 +62,23 @@
           </select>
         </div>
       </div>
-    </div> <hr>
+    </div>
+    <hr />
 
-    <h3 class="mt-3">Documents</h3> 
-    <div class="row mt-3">
-      <div class="col-12 p-4 border-2 rounded bg-light text-white">
+    <h3 class="mt-3">Documents</h3>
+    <div class="d-flex row mt-3 ml-1 mr-1">
+      <div class="col-12 p-4 rounded bg-blue text-white">
         <div class="d-flex justify-content-between">
           <div class="col-10">
-            <div class="row">
+            <div class="d-flex row align-content-center">
+              <!-- <img width="50" height="50" src="https://img.icons8.com/ios/50/000000/document--v1.png" alt="document--v1"/> -->
               <img
-                class="col-lg-2"
-                src="/src/assets/img/theme/team-1-800x800.jpg"
-                alt="file"
+                width="52"
+                height="52"
+                src="https://img.icons8.com/metro/52/ffffff/document.png"
+                alt="document"
               />
-              <div class="col-lg-10">
+              <div class="col-lg-10 ml-2">
                 <span class="row">Nom fichier.pdf</span>
                 <span class="row">Modifié le : 19-06-2023**</span>
               </div>
@@ -84,7 +86,7 @@
           </div>
 
           <div class="align-self-center">
-            <div class="row">
+            <div class="d-flex">
               <i
                 class="fa fa-eye text-success mr-2"
                 role="button"
@@ -100,56 +102,46 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <button class=" mt-2 btn btn-primary">Ajouter un document</button>
+        <button class="mt-2 btn btn-primary">Ajouter un document</button>
       </div>
-    </div> <hr>
-
-
-
-
-
-
-
-
+    </div>
+    <hr />
 
     <h3 class="mt-3">Tâches</h3>
     <div class="row justify-content-start">
       <!-- *ngFor="let task of workflowTask"  -->
       <div class="col-lg-3 mt-4 mb-4">
         <!-- {{ task.id }} -->
-        <h3>Tâche 1**</h3>
+        <div class="d-flex justify-content-between align-content-center">
+          <h3>Tâche 1**</h3>
+          <!-- (click)="deleteTask(task.id)" -->
+          <i class="fa fa-times-circle fa-lg text-danger" role="button"></i>
+        </div>
+
         <div class="form-group">
           <!-- label, input, name = {{ task.id }}   [(ngModel)]="task.title" [(ngModel)]="task.description"-->
-          <label for="title" class="form-control-label"
-            >Titre</label
-          >
+          <label for="title" class="form-control-label">Titre</label>
           <input
             class="form-control"
             type="text"
             id="title"
             name="title"
-            
             required
           />
         </div>
         <div class="form-group">
-          <label
-            class="form-control-label"
-            for="description"
+          <label class="form-control-label" for="description"
             >Description</label
           >
           <textarea
             class="form-control"
             id="description"
             name="description"
-            
             required
           ></textarea>
         </div>
         <div class="form-group">
-          <label
-            class="form-control-label"
-            for="assignedFunction"
+          <label class="form-control-label" for="assignedFunction"
             >Fonction utilisateur</label
           >
           <!-- [(ngModel)]="task.assignedFunction" -->
@@ -158,35 +150,25 @@
             type="text"
             id="assignedFunction"
             name="assignedFunction"
-            
             required
           />
         </div>
         <div class="form-group">
-          <label class="form-control-label" for="order"
-            >Ordre</label
-          >
+          <label class="form-control-label" for="order">Ordre</label>
           <!-- [(ngModel)]="task.order" -->
           <input
             class="form-control"
             type="number"
             id="order"
             name="order"
-            
             required
           />
         </div>
         <!-- (click)="deleteTask(task.id)" -->
-        <button
-          class="btn btn-danger"
-          type="button"
-          
-        >
-          Supprimer
-        </button>
+        <!-- <button class="btn btn-danger" type="button">Supprimer</button> -->
       </div>
     </div>
-    <hr>
+    <hr />
     <button class="btn btn-success">Enregistrer</button>
   </div>
 </div>
