--- a/src/app/pages/workflows/update-task/update-task.component.html
+++ b/src/app/pages/workflows/update-task/update-task.component.html
@@ -2,9 +2,7 @@
 
 <div class="container-fuild">
   <div class="card rounded shadow p-5 m-3 border-0">
-    <h3>
-      Informations générales
-    </h3>
+    <h3>Informations générales</h3>
 
     <div class="row mt-4">
       <div class="col-lg-6">
@@ -28,7 +26,7 @@
       <div class="col-lg-6">
         <div class="row justify-content-center align-content-start">
           <span class="form-control-label col-3">Message :</span>
-          <span class=" text-sm col-9"
+          <span class="text-sm col-9"
             >DG bien vouloir approuver le contrat de d'interim de Zobel dans la
             société audipharm**</span
           >
@@ -48,7 +46,8 @@
           />
         </div>
       </div>
-    </div> <hr>
+    </div>
+    <hr />
 
     <h3 class="mt-3">Progression</h3>
     <div class="row mt-4 justify-content-center">
@@ -65,20 +64,18 @@
           </select>
         </div>
       </div>
-    </div> <hr>
+    </div>
+    <hr />
 
-    <h3 class="mt-3">Documents</h3> 
-    <div class="row mt-3">
-      <div class="col-12 p-4 border-2 rounded bg-light text-white">
+    <h3 class="mt-3">Documents</h3>
+    <div class="d-flex row mt-3 ml-1 mr-1">
+      <div class="col-12 p-4 rounded bg-blue text-white">
         <div class="d-flex justify-content-between">
           <div class="col-10">
-            <div class="row">
-              <img
-                class="col-lg-2"
-                src="/src/assets/img/theme/team-1-800x800.jpg"
-                alt="file"
-              />
-              <div class="col-lg-10">
+            <div class="d-flex row align-content-center">
+              <!-- <img width="50" height="50" src="https://img.icons8.com/ios/50/000000/document--v1.png" alt="document--v1"/> -->
+              <img width="52" height="52" src="https://img.icons8.com/metro/52/ffffff/document.png" alt="document"/>
+              <div class="col-lg-10 ml-2">
                 <span class="row">Nom fichier.pdf</span>
                 <span class="row">Modifié le : 19-06-2023**</span>
               </div>
@@ -86,7 +83,7 @@
           </div>
 
           <div class="align-self-center">
-            <div class="row">
+            <div class="d-flex">
               <i
                 class="fa fa-eye text-success mr-2"
                 role="button"
@@ -102,15 +99,30 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <button class=" mt-2 btn btn-primary">Ajouter un document</button>
+        <button class="mt-2 btn btn-primary">Ajouter un document</button>
       </div>
-    </div> <hr>
-    
+    </div>
+    <hr />
+
     <h3>Réponses</h3>
-    <div class="form-group">
+    <div class="d-block">
+      <div class="form-group">
         <label for="" class="form-control-label">Commentaire :</label>
         <textarea class="form-control" name="com" id="com"></textarea>
+      </div>
+      <div class="d-flex mt-1 mb-1">
+        <button class="btn btn-primary">
+          <i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Rejeter
+        </button>
+        <button class="btn btn-primary">
+          Approuver <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+        </button>
+      </div>
+    </div> <hr>
+
+    <div class="d-flex justify-content-end">
+      <button class="btn btn-success">Enregistrer</button>
+      <button class="btn btn-secondary">Annuler</button>
     </div>
-    <button class="btn btn-success">Enregistrer</button>
   </div>
 </div>
